--- a/embed.html
+++ b/embed.html
@@ -32,7 +32,7 @@
       
         <footer align="center">
             <br><br>
-            WaRush.com
+            WaxRush.com
         </footer>
     </div>
     </center>
