--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body style="background-image: url('files/bg3-plain-2.png');" align="center">
 <center>
-    <div id="container" width="75px">
+    <div id="container">
         <header>
 <p>Random WAX NFT Distributor</p>
         </header>
