--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               
               <table>
           <tr>
-            <th><button id="login" onclick=login() >WAX Login</button></th>
+            <th><button id="login" onclick=login() >Login WAX Wallet</button></th>
             <th><h2 id="current"></h2></th>
           </tr>
 
