--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                           document.getElementById('response').append('* Done *');
                           document.getElementById('response').append('* You are Register *');
 
-                          document.createElement("<div id='myID'> my Text </div>");
-                          document.body.insertBefore(elem,document.body.childNodes[0]);
+                          // document.createElement("<div id='myID'> my Text </div>");
+                          // document.body.insertBefore(elem,document.body.childNodes[0]);
 
                           // document.getElementById('response').append(JSON.stringify(result));
                           // console.log(result); 
