--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
 
-                    <img src="files/aw.png" alt="NFT Distributor" width="40%">
+                    <img src="files/waxrush-nft.gif" alt="NFT Distributor" width="40%">
                     <br>
                     Random NFT distributor (1 WAX)
                    
