--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ dhxWindow.show();
         
        
         <footer align="center">
-            © WaRush.com
+            © WaxRush.com
         </footer>
     </div>
     </center>
