--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 <body style="background-image: url('files/bg3-plain-2.png');" align="center">
 <center>
     <div id="container">
-        <header>
-<p>Random WAX NFT Distributor</p>
-        </header>
+      <img src="files/waxrush.png" alt="NFT Distributor" width="20%">
         
           <details id="details-panel1">
             <summary>WAX LOGIN</summary>
