--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 <body style="background-image: url('files/bg3-plain-2.png');" align="center">
 <center>
     <div id="container">
-      <img src="files/waxrush.png" alt="NFT Distributor" width="20%">
+<img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
+<p>Random WAX NFT Distributor</p>
+        
         
           <details id="details-panel1">
             <summary>WAX LOGIN</summary>
