--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
         
           <details id="details-panel1">
-            <summary>WAX LOGIN <img src="files/wax.svg" alt="WAX Login" width="20px" height="20px"></summary>
+            <summary>WAX LOGIN</summary>
 
             <section id="main">
             <p>
