--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
         
           <details id="details-panel1">
-            <summary>WAX LOGIN</summary>''
+            <summary>WAX LOGIN</summary>
 
             <section id="main">
             <p>
