--- a/index.html
+++ b/index.html
@@ -189,21 +189,12 @@ dhxWindow.show();
   $(function(){
     //Getting values from session and saving in javascript variable.
     // But this will be executed only at document.ready.
-    var firstName = '<%= Session["FirstName"] ?? "" %>';
-    var lastName = '<%= Session["LastName"] ?? "" %>';
+    var firstName = 'joo';
+    var lastName = 'bou';
  
     $("#FirstName").val(firstName);
     $("#LastName").val(lastName);
- 
-    $('Button').click(function(){
-      //Posting values to save in session
-      $.post(document.URL+'?mode=ajax', 
-      {'FirstName':$("#FirstName").val(),
-      'LastName':$("#LastName").val()
-      } );
     });
- 
-  });
   </script>
 
         
