--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ dhxWindow.show();
 <br><br>
 
 <script type="text/javascript">
-  Session["usedData"] = "sample data";
+  Session["userName"] = "sample data";
   </script>
 
 <script type="text/javascript">
