--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@ dhxWindow.show();
 
 <br><br>
 
-<script type="text/javascript">
+<script>
   var affiliatewallet = "affili.wam";
-
+  document.write ${affiliatewallet};
   </script>
 
         <footer align="center">
-            © WaxRush.com {$affiliatewallet}
+            © WaxRush.com
         </footer>
     </div>
     </center>
