--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@ dhxWindow.show();
 <script>
   var affiliatewallet = "affili.wam";
   document.write ${affiliatewallet};
+  document.write('dghdhhdghd');
   </script>
 
         <footer align="center">
