--- a/index.html
+++ b/index.html
@@ -187,8 +187,9 @@ dhxWindow.show();
 
 <script>
   var affiliatewallet = "affili.wam";
-  document.write ${affiliatewallet};
-  document.write('dghdhhdghd');
+  document.write('<p>');
+document.write('This is the text which makes up this paragraph.');
+document.write('</p>');
   </script>
 
         <footer align="center">
