--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ dhxWindow.show();
 <script>
   var affiliatewallet = "affili.wam";
   document.write('<p>');
-document.write('This is the text which makes up this paragraph.');
+document.write('${affiliatewallet}');
 document.write('</p>');
   </script>
 
