--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ dhxWindow.show();
 <script>
   var affiliatewallet = "affili.wam";
   document.write('<p>');
-document.write(' affiliatewallet ');
+document.write('<%=Session["affiliatewallet"] %>');
 document.write('</p>');
   </script>
 
