--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         });
                     
                         const message = res.rows[0] ? res.rows[0].message : `${wax.userAccount}`;
-                        document.write('current').textContent = message;
+                        document.getElementById('current').textContent = message;
                         document.write('current').append('<p>');
                           document.write('current').append('sdfgsfgsdg');
                             document.write('current').append('</p>');
