--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         document.getElementById('current').textContent = message;
                         document.getElementById('current').textContent = ('<p>');
                         document.getElementById('current').textContent = ('working');
-                        document.getElementById('current').textContent = ('<p>');
+                        document.getElementById('current').textContent = ('</p>');
                         
                       }
                     
