--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         const message = res.rows[0] ? res.rows[0].message : `${wax.userAccount}`;
                         document.getElementById('current').value = message;
 
-                        document.getElementById('current').textContent = `${wax.userAccount}`;
+                        document.getElementById('current').textContent = `${wax.userAccount}2`;
 
                         // document.getElementById('current').textContent = ('<p>');
                         // document.getElementById('current').textContent = ('working');
