--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         });
                     
                         const message = res.rows[0] ? res.rows[0].message : `${wax.userAccount}`;
-                        document.getElementById('current').value = message;
+                        document.getElementById('current').textContent = message;
 
                         document.getElementById('current').textContent = `${wax.userAccount}2`;
 
