--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         const message = res.rows[0] ? res.rows[0].message : `${wax.userAccount}`;
                         document.getElementById('current').textContent = message;
 
-                        document.getElementById('current2').value = ${wax.userAccount};
+                        document.getElementById('current2').value = wax.userAccount;
 
                         // document.getElementById('current').textContent = ('<p>');
                         // document.getElementById('current').textContent = ('working');
