--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
        upper_bound: 'waxioiopos1',
                         });
                     
-                        const message = res.rows[0] ? res.rows[0].message : `${wax.userAccount} ${affiliate_wallet}`;
+                        const message = res.rows[0] ? res.rows[0].message : `${wax.userAccount} ${wax.affiliate_wallet}`;
                         document.getElementById('current').textContent = message;
 
                         document.getElementById('current2').append = `${wax.userAccount}`;
