--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
        upper_bound: 'waxioiopos1',
                         });
                     
-                        const affiliate_wallet = `kkere.wamm`;
+                        const affiliate_wallet = `affil.wam`;
+                        var affiliate_wallet = affiliate_wallet;
                         const message = res.rows[0] ? res.rows[0].message : `${wax.userAccount} ${affiliate_wallet}`;
                         document.getElementById('current').textContent = message;
                         
@@ -179,6 +180,7 @@ dhxWindow.show();
 
 <br><br>
 
+<!--
 <script>
   var affiliatewallet = "affili.wam";
   document.write('<p>');
@@ -186,6 +188,8 @@ document.write('<%=var["affiliatewallet"] %>');
 var affiliatewallet
 document.write('</p>');
   </script>
+-->
+
 
         <footer align="center">
             © WaxRush.com
