--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <section id="main">
             <p><img id="login" onclick=login() src="files/login.png" alt="NFT Distributor" width="30%"><br>
-            <h2 id="current"></h2><h2 id="current2"></h2><h2 id="affiliate_wallet"></h2></p>
+            <h2 id="current"></h2><h2 id="current2"></h2>1<h2 id="affiliate_wallet"></h2>2</p>
 
                     <img src="files/waxrush-nft.gif" alt="NFT Distributor" width="40%">
                     <br>
