--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <center>
     <div id="container">
 <img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
-<p>Random WAX NFT Distributor {affiliate_wallet}</p>
+<p>Random WAX NFT Distributor</p>
         
         
           <details id="details-panel1">
