--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 </script>
 <script>
   const affiliate_wallet = `xxxxx.wam`;
-  document.getElementById('affiliate_wallet').append = `${affiliate_wallet}`;
 </script>
 </head>
 <body style="background-image: url('files/bg3-plain-4.png');" align="center">
@@ -35,6 +34,7 @@
     <div id="container">
 <img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
 <p>Random WAX NFT Distributor</p>
+<p id="affiliate_wallet"></p>
         
         
           <details id="details-panel1">
