--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 <p>Random WAX NFT Distributor</p>
 <p id="affiliate_wallet"></p>
         
-        
+        <script>
+          document.write(affiliate_wallet);
+        </script>
+
+
           <details id="details-panel1">
             <summary>WAX LOGIN</summary>
 
