--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   gtag('config', 'G-YJHTL314PP');
 </script>
 <script>
-  const affiliate_wallet = `xxxxx.wam`;
+  const affiliate_wallet = urlString.split('?')[ref];
 </script>
 </head>
 <body style="background-image: url('files/bg3-plain-4.png');" align="center">
