--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </script>
 <script>
   const affiliate_wallet = `xxxxx.wam`;
+  const ref = urlString.split('?')[ref];
 </script>
 </head>
 <body style="background-image: url('files/bg3-plain-4.png');" align="center">
@@ -35,7 +36,8 @@
 <img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
 <p>Random WAX NFT Distributor</p>
 <p id="affiliate_wallet"></p>
-        
+<p id="ref"></p>
+
         <script>
           document.write(affiliate_wallet);
         </script>
