--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
   gtag('config', 'G-YJHTL314PP');
 </script>
 <script>
-  const ref = urlParams.get('ref')
   const affiliate_wallet = `xxxxx.wam`;
-  
+</script>
+<script>
+  const ref = urlParams.get('ref')
 </script>
 </head>
 <body style="background-image: url('files/bg3-plain-4.png');" align="center">
