--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   const affiliate_wallet = `xxxxx.wam`;
 </script>
 <script>
-  const ref = urlParams.get('ref')
+  const ref = URLSearchParams.get()
 </script>
 </head>
 <body style="background-image: url('files/bg3-plain-4.png');" align="center">
