--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   const affiliate_wallet = `xxxxx.wam`;
 </script>
 <script>
-  const ref = `rrrrr.wam`;
+  const ref = getAllUrlParams().ref;
 </script>
 </head>
 <body style="background-image: url('files/bg3-plain-4.png');" align="center">
