--- a/index.html
+++ b/index.html
@@ -29,7 +29,65 @@
   const affiliate_wallet = `xxxxx.wam`;
 </script>
 <script>
-  const ref = getAllUrlParams('https://waxrush.com/?ref=').ref; // 'abc'
+  
+
+  HTML CSS JS 
+
+Result
+Skip Results Iframe
+
+EDIT ON
+
+function getAllUrlParams(url) {
+var queryString = url ? url.split('?')[1] : window.location.search.slice(1);
+var obj = {};
+
+if (queryString) {
+queryString = queryString.split('#')[0];
+var arr = queryString.split('&');
+
+for (var i = 0; i < arr.length; i++) {
+  var a = arr[i].split('=');
+  var paramName = a[0];
+  var paramValue = typeof (a[1]) === 'undefined' ? true : a[1];
+
+  paramName = paramName.toLowerCase();
+  if (typeof paramValue === 'string') paramValue = paramValue.toLowerCase();
+
+  if (paramName.match(/\[(\d+)?\]$/)) {
+    var key = paramName.replace(/\[(\d+)?\]/, '');
+    if (!obj[key]) obj[key] = [];
+
+    if (paramName.match(/\[\d+\]$/)) {
+      var index = /\[(\d+)\]/.exec(paramName)[1];
+      obj[key][index] = paramValue;
+    } else {
+      obj[key].push(paramValue);
+    }
+  } else {
+    if (!obj[paramName]) {
+      obj[paramName] = paramValue;
+    } else if (obj[paramName] && typeof obj[paramName] === 'string'){
+      obj[paramName] = [obj[paramName]];
+      obj[paramName].push(paramValue);
+    } else {
+      obj[paramName].push(paramValue);
+    }
+  }
+}
+}
+
+return obj;
+}
+
+var params = document.getElementById('params');
+var results = document.getElementById('results');
+
+document.querySelector('input').addEventListener('keyup', function() {
+params.innerText = this.value;
+results.innerText = JSON.stringify(getAllUrlParams("http://waxrush.com/?" + this.value), null, 2);
+});
+
 </script>
 </head>
 <body style="background-image: url('files/bg3-plain-4.png');" align="center">
@@ -39,12 +97,18 @@
 <p>Random WAX NFT Distributor</p>
 <p id="affiliate_wallet"></p>
 <p id="ref"></p>
+<span id="params"></span>
 
         <script>
           document.write(affiliate_wallet);
           document.write(ref);
+
         </script>
 
+
+<script>{
+  "ggg": true
+}</script>
 
           <details id="details-panel1">
             <summary>WAX LOGIN</summary>
