--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@ results.innerText = JSON.stringify(getAllUrlParams("http://waxrush.com/?" + this
 <p>Random WAX NFT Distributor</p>
 <p id="affiliate_wallet"></p>
 <p id="ref"></p>
-<span id="params"></span>
+<p><span id="params"></span></p>
+<p><input placeholder="Enter URL params" /></p>
+<pre id="results">{}</pre>
+
+
 
         <script>
           document.write(affiliate_wallet);
