--- a/index.html
+++ b/index.html
@@ -89,6 +89,28 @@ results.innerText = JSON.stringify(getAllUrlParams("http://waxrush.com/?" + this
 });
 
 </script>
+<style>
+  body{
+  padding: 10px;
+}
+
+input {
+  width: 500px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+p {
+  font-size: 18px;
+  line-height: 28px;
+  font-family: Georgia,serif;
+  color: #333;
+}
+</style>
 </head>
 <body style="background-image: url('files/bg3-plain-4.png');" align="center">
 <center>
@@ -98,7 +120,7 @@ results.innerText = JSON.stringify(getAllUrlParams("http://waxrush.com/?" + this
 <p id="affiliate_wallet"></p>
 <p id="ref"></p>
 <p><span id="params"></span></p>
-<p><input placeholder="Enter URL params" /></p>
+<p><input placeholder="Enter URL params" /></p>jhgjh
 <pre id="results">{}</pre>
 
 
