--- a/index.html
+++ b/index.html
@@ -29,88 +29,11 @@
   const affiliate_wallet = `xxxxx.wam`;
 </script>
 <script>
-  
+  const ref = queryString = queryString.split('#')[0];
 
-  HTML CSS JS 
 
-Result
-Skip Results Iframe
-
-EDIT ON
-
-function getAllUrlParams(url) {
-var queryString = url ? url.split('?')[1] : window.location.search.slice(1);
-var obj = {};
-
-if (queryString) {
-queryString = queryString.split('#')[0];
-var arr = queryString.split('&');
-
-for (var i = 0; i < arr.length; i++) {
-  var a = arr[i].split('=');
-  var paramName = a[0];
-  var paramValue = typeof (a[1]) === 'undefined' ? true : a[1];
-
-  paramName = paramName.toLowerCase();
-  if (typeof paramValue === 'string') paramValue = paramValue.toLowerCase();
-
-  if (paramName.match(/\[(\d+)?\]$/)) {
-    var key = paramName.replace(/\[(\d+)?\]/, '');
-    if (!obj[key]) obj[key] = [];
-
-    if (paramName.match(/\[\d+\]$/)) {
-      var index = /\[(\d+)\]/.exec(paramName)[1];
-      obj[key][index] = paramValue;
-    } else {
-      obj[key].push(paramValue);
-    }
-  } else {
-    if (!obj[paramName]) {
-      obj[paramName] = paramValue;
-    } else if (obj[paramName] && typeof obj[paramName] === 'string'){
-      obj[paramName] = [obj[paramName]];
-      obj[paramName].push(paramValue);
-    } else {
-      obj[paramName].push(paramValue);
-    }
-  }
-}
-}
-
-return obj;
-}
-
-var params = document.getElementById('params');
-var results = document.getElementById('results');
-
-document.querySelector('input').addEventListener('keyup', function() {
-params.innerText = this.value;
-results.innerText = JSON.stringify(getAllUrlParams("http://waxrush.com/?" + this.value), null, 2);
-});
 
 </script>
-<style>
-  body{
-  padding: 10px;
-}
-
-input {
-  width: 500px;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-p {
-  font-size: 18px;
-  line-height: 28px;
-  font-family: Georgia,serif;
-  color: #333;
-}
-</style>
 </head>
 <body style="background-image: url('files/bg3-plain-4.png');" align="center">
 <center>
@@ -119,22 +42,15 @@ p {
 <p>Random WAX NFT Distributor</p>
 <p id="affiliate_wallet"></p>
 <p id="ref"></p>
-<p><span id="params"></span></p>
-<p><input placeholder="Enter URL params" /></p>jhgjh
-<pre id="results">{}</pre>
-
-
 
         <script>
           document.write(affiliate_wallet);
-          document.write(ref);
-
         </script>
+<script>
+  document.write(ref);
+</script>
 
 
-<script>{
-  "ggg": true
-}</script>
 
           <details id="details-panel1">
             <summary>WAX LOGIN</summary>
