--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
   const affiliate_wallet = `xxxxx.wam`;
 </script>
 <script>
-  const ref = queryString = queryString.split('#')[0];
-
-
-
+  const ref = queryString.split('#')[0];
 </script>
 </head>
 <body style="background-image: url('files/bg3-plain-4.png');" align="center">
