--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   const affiliate_wallet = `xxxxx.wam`;
 </script>
 <script>
-  // const ref = queryString.split('#')[0];
+  /// const ref = queryString.split('#')[0];
   // const original = getAllUrlParams().ref;
   // const ref = decodeURIComponent(original);
 
