--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@ const affiliate_wallet = url.searchParams.get("ref");
 
         <script>
           if (elem); // or !elem
-          document.write(affiliate_wallet);
+          document.write(ref);
           if (elem != null);
         </script>
+<script>
+  
+</script>
 
 
 
