--- a/index.html
+++ b/index.html
@@ -40,20 +40,21 @@ const affiliate_wallet = url.searchParams.get("ref");
 <img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
 <p>Random WAX NFT Distributor</p>
 <!--
-  <p id="affiliate_wallet"></p>
-<p id="ref"></p>
+  
 -->
-
+<p id="affiliate_wallet"></p>1
+<p id="ref"></p>2
 
         <script>
           if (elem); // or !elem
-          document.write(ref);
+          document.write(affiliate_wallet);
           if (elem != null);
         </script>
+        3
 <script>
-  
+  document.write(ref);
 </script>
-
+4
 
 
           <details id="details-panel1">
