--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ const affiliate_wallet = url.searchParams.get("ref");
 
         <script>
           if (elem); // or !elem
-          document.write(affiliate_wallet);
+          document.write(ref);
           if (elem != null);
         </script>
         3
