--- a/index.html
+++ b/index.html
@@ -46,15 +46,12 @@ const affiliate_wallet = url.searchParams.get("ref");
 <p id="ref"></p>2
 
         <script>
-          if (elem); // or !elem
+          if (ref); // or !elem
           document.write(ref);
-          if (elem != null);
+          if (ref != null);
         </script>
         3
-<script>
-  document.write(ref);
-</script>
-4
+
 
 
           <details id="details-panel1">
