--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ const affiliate_wallet = url.searchParams.get("ref");
         <script>
           if (ref); // or !elem
           document.write(ref);
-          if (ref != 'xxx');
+          if (ref!);
+          document.write('xxx');
         </script>
         3
 
