--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ const affiliate_wallet = url.searchParams.get("ref");
         <script>
           if (ref); // or !elem
           document.write(ref);
-          else 
+          if (ref !);
           document.write('xxx');
         </script>
         3
