--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@ const affiliate_wallet = url.searchParams.get("ref");
         <script>
           if (ref); // or !elem
           document.write(ref);
-          if (ref !);
-          document.write('xxx');
+          if (ref != );
         </script>
         3
 
