--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ const affiliate_wallet = url.searchParams.get("ref");
         <script>
           if (ref); // or !elem
           document.write(ref);
-          if (ref != );
+          if (ref !== 'xxx');
         </script>
         3
-
+4
 
 
           <details id="details-panel1">
