--- a/index.html
+++ b/index.html
@@ -39,19 +39,14 @@ const affiliate_wallet = url.searchParams.get("ref");
     <div id="container">
 <img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
 <p>Random WAX NFT Distributor</p>
-<!--
-  
--->
-<p id="affiliate_wallet"></p>1
-<p id="ref"></p>2
 
         <script>
+          
+          if (typeof ref !== 'xxx') {
           if (ref); // or !elem
           document.write(ref);
-          if (typeof ref !== 'xxxx');
+}
         </script>
-        3
-4
 
 
           <details id="details-panel1">
