--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ const affiliate_wallet = url.searchParams.get("ref");
           
           if (typeof ref !== 'xxx') {
           if (ref); // or !elem
+          document.write(ref);
 }
         </script>
 
