--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ const affiliate_wallet = url.searchParams.get("ref");
 
         <script>
           
-          if (typeof ref !== 'xxx') {
+          if (typeof ref !== ref) {
           if (ref); // or !elem
           document.write(ref);
 }
