--- a/index.html
+++ b/index.html
@@ -39,14 +39,7 @@ const affiliate_wallet = url.searchParams.get("ref");
     <div id="container">
 <img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
 <p>Random WAX NFT Distributor</p>
-
-        <script>
-          
-          if (typeof ref !== ref) {
-          if (ref); // or !elem
-          document.write(ref);
-}
-        </script>
+<script>document.write(ref);</script>
 
 
           <details id="details-panel1">
