--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@ const affiliate_wallet = url.searchParams.get("ref");
 <p>Random WAX NFT Distributor</p>
 
         <script>
-          var dark = typeof darkColor !== typeof undefined ? darkColor : "black";
-
          // if (typeof ref !== ref) {
          // if (ref); // or !elem
          // document.write(ref);
 //}
+if(ref) {
+    document.write(ref);
+}
+if(!ref) {
+    document.write(ref);
+}
         </script>
 
 
