--- a/index.html
+++ b/index.html
@@ -41,16 +41,8 @@ const affiliate_wallet = url.searchParams.get("ref");
 <p>Random WAX NFT Distributor</p>
 
         <script>
-         // if (typeof ref !== ref) {
-         // if (ref); // or !elem
-         // document.write(ref);
-//}
-if(ref) {
-    document.write(ref);
-}
-if(!ref) {
-    document.write(ref);
-}
+         !if (ref); // or !elem
+         document.write(ref);
         </script>
 
 
