--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@ const affiliate_wallet = url.searchParams.get("ref");
 <p>Random WAX NFT Distributor</p>
 
         <script>
-         if (ref); // or !elem
-         document.write(ref);
-         !if (ref); // or !elem
-         document.write("xxx");
+        // if (ref); // or !elem
+        // document.write(ref);
         </script>
 
 
