--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ const affiliate_wallet = url.searchParams.get("ref");
                               }],
                               data: {
                                 wallet,
-                                ref,
+                                affiliate_wallet: ref,
                               },
                             }]
                           }, {
