--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <script>
 var url_string = window.location.href;
 var url = new URL(url_string);
-var ref = url.searchParams.get("ref") || 'xxxyx.wam';
+var ref = url.searchParams.get("ref") || 'kkere.wam';
 const affiliate_wallet = url.searchParams.get("ref");
 </script>
 
@@ -40,10 +40,7 @@ const affiliate_wallet = url.searchParams.get("ref");
 <img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
 <p>Random WAX NFT Distributor</p>
 
-        <script>
-        // if (ref); // or !elem
-        // document.write(ref);
-        </script>
+        <script>document.write(ref);<script>
 
 
           <details id="details-panel1">
