--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ const affiliate_wallet = url.searchParams.get("ref");
 <img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
 <p>Random WAX NFT Distributor</p>
 
-        <script>document.write(ref);<script>
+        <script>document.write(ref);</script>
 
 
           <details id="details-panel1">
