--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <script>
 var url_string = window.location.href;
 var url = new URL(url_string);
-var ref = url.searchParams.get("ref") || '';
+var ref = url.searchParams.get("ref") || 'kkere.wam';
 const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
 </script>
 
