--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
 <img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
 <p>Random WAX NFT Distributor</p>
 
-        <script>document.write(ref);</script>
-
-
           <details id="details-panel1">
             <summary>WAX LOGIN</summary>
 
@@ -201,7 +198,11 @@ document.write('</p>');
 
 
         <footer align="center">
-            © WaxRush.com
+            © WaxRush.com by <script>document.write(ref);</script>
+
+            <a href="https://wax.bloks.io/account/<script>document.write(ref);</script>" alt="" target="_blank"><script>document.write(ref);</script></a>
+
+            
         </footer>
     </div>
     </center>
