--- a/index.html
+++ b/index.html
@@ -200,9 +200,10 @@ document.write('</p>');
         <footer align="center">
             © WaxRush.com by <script>document.write(ref);</script>
 
-            <a href="https://wax.bloks.io/account/<script>document.write(ref);</script>" alt="" target="_blank"><script>document.write(ref);</script></a>
+            <a href=<script>document.write('https://wax.bloks.io/account/');document.write(ref);</script>" alt="" target="_blank"><script>document.write(ref);</script></a>
 
             
+
         </footer>
     </div>
     </center>
