--- a/index.html
+++ b/index.html
@@ -202,7 +202,11 @@ document.write('</p>');
 
             <a href="<script>document.write('https://wax.bloks.io/account/');document.write(ref);</script>" alt="" target="_blank"><script>document.write(ref);</script></a>
 
-            
+            <script>
+            document.write('<div>');
+            document.write(ref);
+            document.write('</div>');
+            </script>
 
         </footer>
     </div>
