--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@ document.write('</p>');
         <footer align="center">
             © WaxRush.com by <script>document.write(ref);</script>
 
-            <a href="<script>document.write('https://wax.bloks.io/account/');document.write(ref);</script>" alt="" target="_blank"><script>document.write(ref);</script></a>
+            <a href="https://wax.bloks.io/account/" alt="" target="_blank"><script>document.write(ref);</script></a>
 
             <script>
-            document.write('<div>');
+            document.write('<p>');
             document.write(ref);
-            document.write('</div>');
+            document.write('</p>');
             </script>
 
         </footer>
