--- a/index.html
+++ b/index.html
@@ -203,9 +203,16 @@ document.write('</p>');
             <a href="https://wax.bloks.io/account/" alt="" target="_blank"><script>document.write(ref);</script></a>
 
             <script>
-            document.write('<p>');
+            document.write('<p><a href="https://wax.bloks.io/account/');
             document.write(ref);
-            document.write('</p>');
+            document.write('" target="_blank">');
+            document.write(ref);
+            document.write('</a></p>');
+
+
+
+            alt="" target="_blank">
+
             </script>
 
         </footer>
