--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@ document.write('</p>');
             <a href="https://wax.bloks.io/account/" alt="" target="_blank"><script>document.write(ref);</script></a>
 
             <script>
-            document.write('<p><a href="https://wax.bloks.io/account/');
-            document.write(ref);
-            document.write('" target="_blank">');
-            document.write(ref);
-            document.write('</a></p>');
+            document.write('<p><a href="https://wax.bloks.io/account/${ref}" target="_blank">xxx</a></p>');
+            //document.write(ref);
+            //document.write('');
+            //document.write(ref);
+            //document.write('');
 
 
 
