--- a/index.html
+++ b/index.html
@@ -198,21 +198,13 @@ document.write('</p>');
 
 
         <footer align="center">
-            © WaxRush.com by <script>document.write(ref);</script>
-
-            <a href="https://wax.bloks.io/account/" alt="" target="_blank"><script>document.write(ref);</script></a>
-
-            <script>
-            document.write('<p><a href="https://wax.bloks.io/account/${ref}" target="_blank">xxx</a></p>');
-            //document.write(ref);
-            //document.write('');
-            //document.write(ref);
-            //document.write('');
-
-
-
+            © WaxRush.com by <script>
+            document.write('<p><a href="https://wax.bloks.io/account/');
+            document.write(ref);
+            document.write('" target="_blank">');
+            document.write(ref);
+            document.write('</a></p>');
             </script>
-
         </footer>
     </div>
     </center>
