--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@ document.write('</p>');
 
 
         <footer align="center">
-            © WaxRush.com by <script>
-            document.write('<p><a href="https://wax.bloks.io/account/');
+            <script>
+            document.write('<p>© WaxRush.com by <a href="https://wax.bloks.io/account/');
             document.write(ref);
             document.write('" target="_blank">');
             document.write(ref);
