--- a/embed.html
+++ b/embed.html
@@ -22,13 +22,19 @@
         <section id="main" align="center">
           <p>
             Embed the distributor in your website/dApp or your 
-            streaming profil like Twitch and earn 5% of all WAX spended by users playing from there. <h2 id="ref"></h2>
+            streaming profil like Twitch and earn 5% of all WAX spended by users playing from there. <h2 id="affiliate_wallet"></h2>
           </p>
 </section>
         <br>
         <textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><iframe src='https://waxrush.com/?ref=xxxxx.wam' title='' height='325' width='325' ></iframe></textarea>
           
-
+        <script>
+            document.write('<p>© WaxRush.com by <a href="https://wax.bloks.io/account/');
+            document.write(ref);
+            document.write('" target="_blank">');
+            document.write(ref);
+            document.write('</a></p>');
+            </script>
       
         <footer align="center">
             <br><br>
