--- a/embed.html
+++ b/embed.html
@@ -15,6 +15,12 @@
 		<link rel="stylesheet" href="../../codebase/suite.css?v=7.3.3">
 		<link rel="stylesheet" href="../common/index.css?v=7.3.3">
 
+        <script>
+            var url_string = window.location.href;
+            var url = new URL(url_string);
+            var ref = url.searchParams.get("ref") || 'kkere.wam';
+            const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
+            </script>
 </head>
 <body style="background-image: url('files/bg3-plain.png');" align="center">
 <center>
