--- a/embed.html
+++ b/embed.html
@@ -28,7 +28,7 @@
         <section id="main" align="center">
           <p>
             Embed the distributor in your website/dApp or your 
-            streaming profil like Twitch and earn 5% of all WAX spended by users playing from there. <h2 id="affiliate_wallet"></h2>
+            streaming profil like Twitch and earn 5% of all WAX spended by users playing from there. <h2 id="ref"></h2>
           </p>
 </section>
         <br>
