--- a/embed.html
+++ b/embed.html
@@ -14,13 +14,6 @@
         <script type="text/javascript" src="../../codebase/suite.js?v=7.3.3"></script>
 		<link rel="stylesheet" href="../../codebase/suite.css?v=7.3.3">
 		<link rel="stylesheet" href="../common/index.css?v=7.3.3">
-
-        <script>
-            var url_string = window.location.href;
-            var url = new URL(url_string);
-            var ref = url.searchParams.get("ref") || 'kkere.wam';
-            const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
-            </script>
 </head>
 <body style="background-image: url('files/bg3-plain.png');" align="center">
 <center>
@@ -35,7 +28,7 @@
         <textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><iframe src='https://waxrush.com/?ref=xxxxx.wam' title='' height='325' width='325' ></iframe></textarea>
           
         <script>
-            document.write(affiliate_wallet);
+            document.write(ref);
             </script>
       
         <footer align="center">
