--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
 css: "dhx_widget--bordered"
 });
 
-    popup.attachHTML("<div style='padding: 0px; text-align: center'> <iframe src='embed.html?ref=" . (ref) . "' title='' height='335' width='335' ></iframe></div>");
+    popup.attachHTML("<div style='padding: 0px; text-align: center'> <iframe src='embed.html?ref=' title='' height='335' width='335' ></iframe></div>");
 document.querySelector("#show").addEventListener("click", function () {
 popup.show("show");
     });
