--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
                         document.getElementById('current').textContent = message;
                         
 
-                        document.getElementById('current2').append = `3${wax.userAccount}`;
+                        document.getElementById('current').append = `3${wax.userAccount}`;
 
                         // document.getElementById('current').textContent = ('<p>');
                         // document.getElementById('current').textContent = ('working');
